Bug 137650 - UI Option to set vertical position of shapes relative to page text area top
Summary: UI Option to set vertical position of shapes relative to page text area top
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Szabolcs Toth
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-21 10:38 UTC by NISZ LibreOffice Team
Modified: 2022-04-13 19:33 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Writer (46.49 KB, image/png)
2020-10-21 10:38 UTC, NISZ LibreOffice Team
Details
testing page text area top (and bottom) (48.48 KB, image/png)
2022-04-11 13:11 UTC, sdc.blanco
Details
test of page text area top and bottom, with two questions (179.64 KB, image/png)
2022-04-13 08:43 UTC, sdc.blanco
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-21 10:38:54 UTC
Created attachment 166576 [details]
Screenshot of the problem in Writer

This is a followup to bug #133045
Now that it is possible to import shapes vertically positioned relative to top margin, it would be useful to display this setting on the UI, similar to the “Page text area bottom” setting added in commit 8af2c4e3a517e3b75f2ace9719c1ca03153baddf

Steps to reproduce:
    1. Open attachment #164118 [details]
    2. Right click one of the shapes and open Position and Size dialog

Actual results:
Vertical position is set to “Page text area bottom” since there is no ““Page text area top” option yet.

Expected results:
““Page text area top” option exists and set.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: e0c72e31c1d455c26110c35e8780d420e17cdea6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 Commit Notification 2020-10-26 09:38:35 UTC
Szabolcs Toth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6a10ea009ef590ac13d01d19fbfbc28c916ef1d4

tdf#137650 sw page top border relative orientation: add UI

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 NISZ LibreOffice Team 2020-11-13 10:17:55 UTC
Verified in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: 693553210828538680408832157faad9654758c8
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!
Comment 3 sdc.blanco 2022-04-11 13:11:49 UTC Comment hidden (obsolete)
Comment 4 sdc.blanco 2022-04-13 08:43:57 UTC Comment hidden (obsolete)
Comment 5 sdc.blanco 2022-04-13 19:33:49 UTC Comment hidden (obsolete)