tdf#137650 GUI adjustment: add page print area top

We now have the option to align items relatively from the top
margin, so add this to the GUI dropdown field.

Change-Id: I4a525d15c5d2f3e0037c448d612202e1ac2cf4a6